--- a/app/src/main/res/layout/cart_total_amount_layout.xml
+++ b/app/src/main/res/layout/cart_total_amount_layout.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
-    android:background="@color/RecyclerViewBackground"
-    android:elevation="3dp">
+    android:background="#d6d6d6">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -77,11 +76,13 @@
             android:id="@+id/delivery_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="Free"
+            android:textSize="18sp"
             android:textColor="@color/successGreen"
-            app:layout_constraintBaseline_toBaselineOf="@+id/total_price"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView20" />
 
         <View
             android:id="@+id/divider9"
