--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -30,6 +30,7 @@
         android:id="@+id/delivery_ryceclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/RecyclerViewBackground"
         app:layout_constraintBottom_toTopOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
