--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -77,14 +77,15 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="ADD TO CART"
+                android:layout_weight="@android:integer/status_bar_notification_info_maxnum"
                 android:drawableEnd="@mipmap/cart_black"
                 android:drawablePadding="8dp"
-                android:gravity="center"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:drawableTint="#485F70"
-                android:textColor="#485F70"/>
+                android:gravity="center"
+                android:text="ADD TO CART"
+                android:textColor="#485F70"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -92,13 +93,14 @@
             android:id="@+id/buy_now_btn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="BUY NOW"
-            android:stateListAnimator="@null"
+            android:layout_weight="1"
             android:background="@color/colorPrimary"
+            android:stateListAnimator="@null"
+            android:text="BUY NOW"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:layout_weight="1"/>
+            android:visibility="gone" />
 
     </LinearLayout>
 
